--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Oswald&display=swap" rel="stylesheet"> 
 
-<title>FRONTENDMASTERS</title>
+<title>FRONTENDCOURSEMASTERS</title>
 </head>
 <body>
 
